k8s-manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tetris-app
  template:
    metadata:
      labels:
        app: tetris-app
    spec:
      containers:
      - name: tetris-container
        image: ugogogabriel/tetris-app:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
