k8s-manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tetris-app
spec:
  type: LoadBalancer
  selector:
    app: tetris-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
